[gd_scene load_steps=4 format=3 uid="uid://du8a418ughjj"]

[ext_resource type="Script" path="res://System/Main.gd" id="1_x3o4i"]
[ext_resource type="Shader" path="res://ShadersLibrary/HSV Manipulation.gdshader" id="2_wfesq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q6ds8"]
shader = ExtResource("2_wfesq")
shader_parameter/AreaShape = Vector2(0, 0)
shader_parameter/IntensityCap = 0.5
shader_parameter/FinalIntensityMultiplier = 1.0
shader_parameter/MultShift = Vector3(1, 0.3, 1)
shader_parameter/FlatShift = Vector3(0.75, 0, -0.1)

[node name="MainScene" type="Node"]
script = ExtResource("1_x3o4i")

[node name="PauseMenu" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 3
visible = false

[node name="Control" type="Control" parent="PauseMenu"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PauseMenu/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0627451, 0.0627451, 0.0627451, 0.870588)

[node name="Label" type="Label" parent="PauseMenu/Control"]
layout_mode = 0
offset_left = 83.0
offset_top = 48.0
offset_right = 140.0
offset_bottom = 71.0
text = "Paused
(Esc to resume)"

[node name="Combat" type="Node" parent="."]
unique_name_in_owner = true

[node name="MainContainer" type="SubViewportContainer" parent="Combat"]
offset_right = 800.0
offset_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Main" type="SubViewport" parent="Combat/MainContainer"]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
audio_listener_enable_2d = true
size = Vector2i(800, 500)
render_target_update_mode = 4

[node name="TurnShader" type="ColorRect" parent="Combat"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_q6ds8")
offset_right = 800.0
offset_bottom = 500.0
mouse_filter = 2

[node name="BackBufferCopy" type="BackBufferCopy" parent="Combat/TurnShader"]
copy_mode = 2

[node name="PreviewContainer" type="SubViewportContainer" parent="Combat"]
modulate = Color(0, 0.898039, 0.901961, 0.792157)
offset_right = 800.0
offset_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="Preview" type="SubViewport" parent="Combat/PreviewContainer"]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(800, 500)
render_target_update_mode = 4

[node name="PreviewFreezeFrame" type="TextureRect" parent="Combat"]
unique_name_in_owner = true
modulate = Color(1, 0, 1, 0.745098)
offset_right = 800.0
offset_bottom = 500.0
mouse_filter = 2

[node name="UI" type="CanvasLayer" parent="Combat"]

[node name="Ears" type="AudioListener2D" parent="."]
